<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Treble</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="menu_action_about">About</string>
    <string name="menu_action_refresh">Refresh</string>
    <string name="menu_action_profile">Profile</string>
    <string name="action_notifications">Notifications</string>
    <string name="action_listen" tools:ignore="UnusedResources">Listen</string>
    <string name="action_explore">Explore</string>
    <string name="useful_tools">Useful Tools</string>
    <string name="action_nearme">Near Me</string>
    <string name="website">http://treble-app.tumblr.com/</string>
    <string name="album_art">Album Artwork</string>
    <string name="song_title">Song Title</string>
    <string name="artist">Artist</string>
    <string name="instructions">Search Spotify for a song to add to the feed!</string>
    <string name="example_query">Hello Adele</string>
    <string name="search">Search</string>


    <string name="plus">+</string>
    <string name="votes">votes</string>
    <string name="minus">-</string>


    <string name="empty_feed">The feed is currently empty...Please add a song to get the party started!</string>

    <string name="about_text">Treble\n\nVersion 1.1\n\nWritten by O. MacDougal and D. McConnell\n\nLast updated on 13 December 2016</string>
    <string name="search_error">Please enter something to search</string>
</resources>
