<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.treble_app.www.treble.MainActivity">
    <!--<item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />-->
    <item
        android:id="@+id/action_listen"
        android:icon="@drawable/ic_headset_white_18dp"
        android:title="@string/action_listen"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_nearme"
        android:icon="@drawable/ic_near_me_white_18dp"
        android:title="@string/action_nearme"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_white_18dp"
        android:title="@string/action_search"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_notifications"
        android:icon="@drawable/ic_notifications_white_18dp"
        android:title="@string/action_notifications"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_profile"
        android:orderInCategory="1"
        android:title="@string/menu_action_profile" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="2"
        android:title="@string/menu_action_about" />
</menu>