<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
            android:id="@+id/album"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:contentDescription="@string/album_art"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />

    <TextView
            android:id="@+id/artist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/artist"
            android:layout_below="@+id/song"
            android:layout_alignStart="@+id/song" />

    <TextView
        android:id="@+id/song"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/song_title"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/album"
        android:layout_marginStart="58dp" />

</RelativeLayout>
